<resources>
    <string name="app_name">Koнспектатор</string>
    <string name="content_image_view_head_activity">Иконка приложения</string>
    <string name="developed_by_goose">Developed by Goose</string>
    <string name="email">Email</string>
    <string name="email_already_use">Пользователь с такой почтой уже существует</string>
    <string name="email_error">Почта должна быть действительна</string>
    <string name="fragment_conspectus">Конспекты</string>
    <string name="fragment_dates">Даты</string>
    <string name="fragment_history">История</string>
    <string name="fragment_select">Выбрать файл</string>
    <string name="no_such_user">Такого пользователя, увы, не нашлось</string>
    <string name="password">Пароль</string>
    <string name="password_error">Пароль должен быть не менее 6 символов</string>
    <string name="password_wrong">К сожалению, неверый пароль</string>
    <string name="select_file">Выбрать файл</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_fail">Что-то пошло не так…</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="take_photo">Сделать фото</string>
    <string name="process_all">Обработать\n все</string>
    <string name="yes">Да,\n пожалуйста</string>
    <string name="cancel">Я\n передумал…</string>
    <string name="add_photo">Добавить еще одну фотографию?</string>
    <string name="preference_file_key">SharedPreferenceFileKey</string>
    <string name="delete_history">Очистить историю</string>
    <string name="accept_changes">Принять\n изменения</string>
    <string name="paragraph">Параграф</string>
    <string name="delete_paragraph">Удалить\nпараграф</string>
    <string name="make_backup">Сделать резервную копию</string>
    <string name="upload_backup">Загрузить резервную копию</string>
    <string name="check_connection">Проверьте подключение к интернету</string>
    <string name="wrong_path">Неверный путь до файла</string>
    <string name="test_ads_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ads_id">ca-app-pub-3940256099942544/3419835294</string>
    <string name="exit">Выйти из приложения</string>
    <string name="select_photo_icon">select_photo_icon</string>
    <string name="select_file_icon">select_file_icon</string>
    <string name="take_photo_icon">take_photo_icon</string>
    <string name="empty_here">Здесь пока пусто...</string>
</resources>
