<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:hint="@string/paragraph"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="18"
        android:padding="20dp"
        android:textColor="@color/milk"
        android:textColorHint="@color/warm_milk"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/accept_changes"
            android:textAllCaps="false"
            android:textColor="@color/milk"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/delete_paragraph"
            android:textAllCaps="false"
            android:textColor="@color/milk"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/milk"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>