<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:contentDescription="@string/content_image_view_head_activity"
        app:srcCompat="@drawable/image_conspectus" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/app_name"
        android:textColor="@color/milk"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginTop="50dp"
        android:indeterminateTint="@color/milk"
        android:padding="20dp" />

    <TextView
        android:id="@+id/designedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:padding="15dp"
        android:text="@string/developed_by_goose"
        android:textAlignment="center"
        android:textColor="@color/milk"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>