<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools "
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragment.ConspectusFragment">

    <Button
        android:id="@+id/select_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/ic_select_photo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_photo"
        android:layout_marginStart="40dp"
        android:text="@string/select_photo"
        android:textColor="@color/milk"
        android:textSize="20sp" />

    <Button
        android:id="@+id/select_file"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/ic_select_file" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_file"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:text="@string/select_file"
        android:textColor="@color/milk"
        android:textSize="20sp" />

    <Button
        android:id="@+id/take_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="@drawable/ic_take_photo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/take_photo"
        android:layout_centerHorizontal="true"
        android:text="@string/take_photo"
        android:textColor="@color/milk"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/show_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:src="@drawable/ic_dots"
        tools2:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools2:ignore="ContentDescription"
        tools:ignore="ContentDescription" />
</RelativeLayout>